src/eccodes/eccodes.h


#define CODES_TYPE_UNDEFINED GRIB_TYPE_UNDEFINED
#define CODES_TYPE_LONG      GRIB_TYPE_LONG
#define CODES_TYPE_DOUBLE    GRIB_TYPE_DOUBLE
#define CODES_TYPE_STRING    GRIB_TYPE_STRING
#define CODES_TYPE_BYTES     GRIB_TYPE_BYTES
#define CODES_TYPE_SECTION   GRIB_TYPE_SECTION
#define CODES_TYPE_LABEL     GRIB_TYPE_LABEL
#define CODES_TYPE_MISSING   GRIB_TYPE_MISSING
#define CODES_MISSING_LONG   GRIB_MISSING_LONG
#define CODES_MISSING_DOUBLE GRIB_MISSING_DOUBLE
#define CODES_NEAREST_SAME_GRID  GRIB_NEAREST_SAME_GRID
#define CODES_NEAREST_SAME_DATA  GRIB_NEAREST_SAME_DATA
#define CODES_NEAREST_SAME_POINT GRIB_NEAREST_SAME_POINT
#define CODES_GEOITERATOR_NO_VALUES GRIB_GEOITERATOR_NO_VALUES
#define CODES_KEYS_ITERATOR_ALL_KEYS GRIB_KEYS_ITERATOR_ALL_KEYS
#define CODES_KEYS_ITERATOR_SKIP_READ_ONLY GRIB_KEYS_ITERATOR_SKIP_READ_ONLY
#define CODES_KEYS_ITERATOR_SKIP_OPTIONAL GRIB_KEYS_ITERATOR_SKIP_OPTIONAL
#define CODES_KEYS_ITERATOR_SKIP_EDITION_SPECIFIC GRIB_KEYS_ITERATOR_SKIP_EDITION_SPECIFIC
#define CODES_KEYS_ITERATOR_SKIP_CODED GRIB_KEYS_ITERATOR_SKIP_CODED
#define CODES_KEYS_ITERATOR_SKIP_COMPUTED GRIB_KEYS_ITERATOR_SKIP_COMPUTED
#define CODES_KEYS_ITERATOR_SKIP_DUPLICATES GRIB_KEYS_ITERATOR_SKIP_DUPLICATES
#define CODES_KEYS_ITERATOR_SKIP_FUNCTION GRIB_KEYS_ITERATOR_SKIP_FUNCTION
#define CODES_KEYS_ITERATOR_DUMP_ONLY GRIB_KEYS_ITERATOR_DUMP_ONLY
typedef struct grib_handle codes_handle;
typedef struct grib_multi_handle codes_multi_handle;
typedef struct grib_context codes_context;
typedef struct grib_iterator codes_iterator;
typedef struct grib_nearest codes_nearest;
typedef struct grib_keys_iterator codes_keys_iterator;
typedef struct grib_index codes_index;
int codes_count_in_file(codes_context* c, FILE* f, int* n);
int codes_count_in_filename(codes_context* c, const char* filename, int* n);
codes_handle* codes_handle_new_from_file(codes_context* c, FILE* f, ProductKind product, int* error);
codes_handle* codes_grib_handle_new_from_file(codes_context* c, FILE* f, int* error);
codes_handle* codes_bufr_handle_new_from_file(codes_context* c, FILE* f, int* error);
codes_handle* codes_handle_new_from_message(codes_context* c, const void* data, size_t data_len);
codes_handle* codes_handle_new_from_message_copy(codes_context* c, const void* data, size_t data_len);
codes_handle* codes_grib_handle_new_from_samples(codes_context* c, const char* sample_name);
codes_handle* codes_bufr_handle_new_from_samples(codes_context* c, const char* sample_name);
codes_handle* codes_handle_new_from_samples(codes_context* c, const char* sample_name);
codes_handle* codes_handle_clone(const codes_handle* h);
codes_handle* codes_handle_clone_headers_only(const codes_handle* h);
int codes_handle_delete(codes_handle* h);
int codes_get_offset(const codes_handle* h, const char* key, size_t* offset);
int codes_get_size(const codes_handle* h, const char* key, size_t* size);
int codes_get_length(const codes_handle* h, const char* key, size_t* length);
int codes_get_long(const codes_handle* h, const char* key, long* value);
int codes_get_double(const codes_handle* h, const char* key, double* value);
int codes_get_float(const codes_handle* h, const char* key, float* value);
int codes_get_double_element(const codes_handle* h, const char* key, int i, double* value);
int codes_get_float_element(const codes_handle* h, const char* key, int i, float* value);
int codes_get_double_elements(const codes_handle* h, const char* key, const int* index_array, long size, double* value);
int codes_get_float_elements(const codes_handle* h, const char* key, const int* index_array, long size, float* value);
int codes_get_string(const codes_handle* h, const char* key, char* value, size_t* length);
int codes_get_string_array(const codes_handle* h, const char* key, char** vals, size_t* length);
int codes_get_bytes(const codes_handle* h, const char* key, unsigned char* bytes, size_t* length);
int codes_get_double_array(const codes_handle* h, const char* key, double* vals, size_t* length);
int codes_get_float_array(const codes_handle* h, const char* key, float* vals, size_t* length);
int codes_get_long_array(const codes_handle* h, const char* key, long* vals, size_t* length);
int codes_set_long(codes_handle* h, const char* key, long val);
int codes_set_double(codes_handle* h, const char* key, double val);
codes_context* codes_context_get_default(void);
void codes_context_delete(codes_context* c);
void codes_context_set_definitions_path(codes_context* c, const char* path);
void codes_context_set_samples_path(codes_context* c, const char* path);
long codes_get_api_version(void);
const char* codes_get_git_sha1(void);
const char* codes_get_git_branch(void);
const char* codes_get_build_date(void);
const char* codes_get_package_name(void);
const char* codes_get_error_message(int code);
const char* codes_get_type_name(int type);
int codes_get_native_type(const codes_handle* h, const char* name, int* type);
int codes_is_missing(const codes_handle* h, const char* key, int* err);
int codes_is_defined(const codes_handle* h, const char* key);
int codes_get_product_kind(const codes_handle* h, ProductKind* product_kind);
#define CODES_SUCCESS		GRIB_SUCCESS
#define CODES_END_OF_FILE		GRIB_END_OF_FILE
#define CODES_INTERNAL_ERROR		GRIB_INTERNAL_ERROR
#define CODES_BUFFER_TOO_SMALL		GRIB_BUFFER_TOO_SMALL
#define CODES_NOT_IMPLEMENTED		GRIB_NOT_IMPLEMENTED
#define CODES_7777_NOT_FOUND		GRIB_7777_NOT_FOUND
#define CODES_ARRAY_TOO_SMALL		GRIB_ARRAY_TOO_SMALL
#define CODES_FILE_NOT_FOUND		GRIB_FILE_NOT_FOUND
#define CODES_CODE_NOT_FOUND_IN_TABLE		GRIB_CODE_NOT_FOUND_IN_TABLE
#define CODES_WRONG_ARRAY_SIZE		GRIB_WRONG_ARRAY_SIZE
#define CODES_NOT_FOUND		GRIB_NOT_FOUND
#define CODES_IO_PROBLEM		GRIB_IO_PROBLEM
#define CODES_INVALID_MESSAGE		GRIB_INVALID_MESSAGE
#define CODES_DECODING_ERROR		GRIB_DECODING_ERROR
#define CODES_ENCODING_ERROR		GRIB_ENCODING_ERROR
#define CODES_NO_MORE_IN_SET		GRIB_NO_MORE_IN_SET
#define CODES_GEOCALCULUS_PROBLEM		GRIB_GEOCALCULUS_PROBLEM
#define CODES_OUT_OF_MEMORY		GRIB_OUT_OF_MEMORY
#define CODES_READ_ONLY		GRIB_READ_ONLY
#define CODES_INVALID_ARGUMENT		GRIB_INVALID_ARGUMENT
#define CODES_NULL_HANDLE		GRIB_NULL_HANDLE
#define CODES_INVALID_SECTION_NUMBER		GRIB_INVALID_SECTION_NUMBER
#define CODES_VALUE_CANNOT_BE_MISSING		GRIB_VALUE_CANNOT_BE_MISSING
#define CODES_WRONG_LENGTH		GRIB_WRONG_LENGTH
#define CODES_INVALID_TYPE		GRIB_INVALID_TYPE
#define CODES_WRONG_STEP		GRIB_WRONG_STEP
#define CODES_WRONG_STEP_UNIT		GRIB_WRONG_STEP_UNIT
#define CODES_INVALID_FILE		GRIB_INVALID_FILE
#define CODES_INVALID_GRIB		GRIB_INVALID_GRIB
#define CODES_INVALID_INDEX		GRIB_INVALID_INDEX
#define CODES_INVALID_ITERATOR		GRIB_INVALID_ITERATOR
#define CODES_INVALID_KEYS_ITERATOR		GRIB_INVALID_KEYS_ITERATOR
#define CODES_INVALID_NEAREST		GRIB_INVALID_NEAREST
#define CODES_INVALID_ORDERBY		GRIB_INVALID_ORDERBY
#define CODES_MISSING_KEY		GRIB_MISSING_KEY
#define CODES_OUT_OF_AREA		GRIB_OUT_OF_AREA
#define CODES_CONCEPT_NO_MATCH		GRIB_CONCEPT_NO_MATCH
#define CODES_HASH_ARRAY_NO_MATCH		GRIB_HASH_ARRAY_NO_MATCH
#define CODES_NO_DEFINITIONS		GRIB_NO_DEFINITIONS
#define CODES_WRONG_TYPE		GRIB_WRONG_TYPE
#define CODES_END		GRIB_END
#define CODES_NO_VALUES		GRIB_NO_VALUES
#define CODES_WRONG_GRID		GRIB_WRONG_GRID
#define CODES_END_OF_INDEX		GRIB_END_OF_INDEX
#define CODES_NULL_INDEX		GRIB_NULL_INDEX
#define CODES_PREMATURE_END_OF_FILE		GRIB_PREMATURE_END_OF_FILE
#define CODES_INTERNAL_ARRAY_TOO_SMALL		GRIB_INTERNAL_ARRAY_TOO_SMALL
#define CODES_MESSAGE_TOO_LARGE		GRIB_MESSAGE_TOO_LARGE
#define CODES_CONSTANT_FIELD		GRIB_CONSTANT_FIELD
#define CODES_SWITCH_NO_MATCH		GRIB_SWITCH_NO_MATCH
#define CODES_UNDERFLOW		GRIB_UNDERFLOW
#define CODES_MESSAGE_MALFORMED		GRIB_MESSAGE_MALFORMED
#define CODES_CORRUPTED_INDEX		GRIB_CORRUPTED_INDEX
#define CODES_INVALID_BPV		GRIB_INVALID_BPV
#define CODES_DIFFERENT_EDITION		GRIB_DIFFERENT_EDITION
#define CODES_VALUE_DIFFERENT		GRIB_VALUE_DIFFERENT
#define CODES_INVALID_KEY_VALUE		GRIB_INVALID_KEY_VALUE
#define CODES_STRING_TOO_SMALL		GRIB_STRING_TOO_SMALL
#define CODES_WRONG_CONVERSION		GRIB_WRONG_CONVERSION
#define CODES_MISSING_BUFR_ENTRY		GRIB_MISSING_BUFR_ENTRY
#define CODES_NULL_POINTER		GRIB_NULL_POINTER
#define CODES_ATTRIBUTE_CLASH		GRIB_ATTRIBUTE_CLASH
#define CODES_TOO_MANY_ATTRIBUTES		GRIB_TOO_MANY_ATTRIBUTES
#define CODES_ATTRIBUTE_NOT_FOUND		GRIB_ATTRIBUTE_NOT_FOUND
#define CODES_UNSUPPORTED_EDITION		GRIB_UNSUPPORTED_EDITION
#define CODES_OUT_OF_RANGE		GRIB_OUT_OF_RANGE
#define CODES_WRONG_BITMAP_SIZE		GRIB_WRONG_BITMAP_SIZE
#define CODES_FUNCTIONALITY_NOT_ENABLED		GRIB_FUNCTIONALITY_NOT_ENABLED